feat: Integrate Vercel Speed Insights
Add Vercel Speed Insights to the application for performance monitoring. This involves updating dependencies and importing the `SpeedInsights` component into the main application entry point.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.4.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0"
+    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
+    "@vercel/speed-insights/react": "https://aistudiocdn.com/@vercel/speed-insights@1.0.10/dist/react/index.mjs",
+    "@vercel/speed-insights/": "https://aistudiocdn.com/@vercel/speed-insights@^1.2.0/"
   }
 }
 </script>
